--- a/.github/workflows/heroku.yml
+++ b/.github/workflows/heroku.yml
@@ -17,6 +17,11 @@ jobs:
       with:
         python-version: '3.11.7'  # Set to your Python version
 
+    - name: Clear Python cache
+      run: |
+        echo "Clearing Python pip cache"
+        rm -rf ~/.cache/pip
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
