--- a/.github/workflows/heroku.yml
+++ b/.github/workflows/heroku.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        pip install -r reqs.txt
 
     - name: Deploy to Heroku
       uses: akhileshns/heroku-deploy@v3.12.12  # Ensure you use the latest version
